--- a/payment.html
+++ b/payment.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Registro</title>
+    <title>Innova Mirror</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./payment.css" />
+    <link rel="stylesheet" href="./CSS/payment.css" />
 </head>
  <body>
-    <div class="tips">
-        Payment card number: (4) VISA, (51 -> 55) MasterCard, (36-38-39) DinersClub, (34-37) American Express, (65) Discover, (5019) dankort
-        </div>
-        
-        <div class="container">
-          <div class="col1">
-            <div class="card">
-              <div class="front">
-                <div class="type">
-                  <img class="bankid"/>
-                </div>
-                <span class="chip"></span>
-                <span class="card_number">&#x25CF;&#x25CF;&#x25CF;&#x25CF; &#x25CF;&#x25CF;&#x25CF;&#x25CF; &#x25CF;&#x25CF;&#x25CF;&#x25CF; &#x25CF;&#x25CF;&#x25CF;&#x25CF; </span>
-                <div class="date"><span class="date_value">MM / YYYY</span></div>
-                <span class="fullname">FULL NAME</span>
-              </div>
-              <div class="back">
-                <div class="magnetic"></div>
-                <div class="bar"></div>
-                <span class="seccode">&#x25CF;&#x25CF;&#x25CF;</span>
-                <span class="chip"></span><span class="disclaimer">This card is property of Random Bank of Random corporation. <br> If found please return to Random Bank of Random corporation - 21968 Paris, Verdi Street, 34 </span>
-              </div>
-            </div>
-          </div>
-          <div class="col2">
-            <label>Card Number</label>
-            <input class="number" type="text" ng-model="ncard" maxlength="19" onkeypress='return event.charCode >= 48 && event.charCode <= 57'/>
-            <label>Cardholder name</label>
-            <input class="inputname" type="text" placeholder=""/>
-            <label>Expiry date</label>
-            <input class="expire" type="text" placeholder="MM / YYYY"/>
-            <label>Security Number</label>
-            <input class="ccv" type="text" placeholder="CVC" maxlength="3" onkeypress='return event.charCode >= 48 && event.charCode <= 57'/>
-            <button class="buy"><i class="material-icons">lock</i> Pay --.-- €</button>
-          </div>
-        </div>
+   <script src= "./JS/payment.js"></script>
+  <!-- multistep form -->
+<form id="msform">
+  <!-- progressbar -->
+  <ul id="progressbar">
+    <li class="active">Método de pago</li>
+    <li>Llenar los datos</li>
+    <li>Confirmación de la información</li>
+  </ul>
+  <!-- fieldsets -->
+  <fieldset>
+    <h2 class="fs-title">Escoja un método de pago</h2>
+    <h3 class="fs-subtitle">This is step 1</h3>
+    <input type="text" name="email" placeholder="Email" />
+    <input type="password" name="pass" placeholder="Password" />
+    <input type="password" name="cpass" placeholder="Confirm Password" />
+    <input type="button" name="next" class="next action-button" value="Next" />
+  </fieldset>
+  <fieldset>
+    <h2 class="fs-title">Social Profiles</h2>
+    <h3 class="fs-subtitle">Your presence on the social network</h3>
+    <input type="text" name="twitter" placeholder="Twitter" />
+    <input type="text" name="facebook" placeholder="Facebook" />
+    <input type="text" name="gplus" placeholder="Google Plus" />
+    <input type="button" name="previous" class="previous action-button" value="Previous" />
+    <input type="button" name="next" class="next action-button" value="Next" />
+  </fieldset>
+  <fieldset>
+    <h2 class="fs-title">Personal Details</h2>
+    <h3 class="fs-subtitle">We will never sell it</h3>
+    <input type="text" name="fname" placeholder="First Name" />
+    <input type="text" name="lname" placeholder="Last Name" />
+    <input type="text" name="phone" placeholder="Phone" />
+    <textarea name="address" placeholder="Address"></textarea>
+    <input type="button" name="previous" class="previous action-button" value="Previous" />
+    <input type="submit" name="submit" class="submit action-button" value="Submit" />
+  </fieldset>
+</form>
 </html>
