Registro background changes and more inputs added

--- a/registro.html
+++ b/registro.html
@@ -27,6 +27,27 @@
         <label for="name"></label>
         <input type="text" placeholder="Número de teléfono" name="telephone" id="telephone_input" required>
       </div>
+      <div class="telephone">
+        <label for="name"></label>
+        <input type="text" placeholder="Fecha de nacimiento     DD/MM/YY" name="telephone" id="telephone_input" required>
+      </div>
+      <div class="subject">
+        <label for="subject"></label>
+        <select placeholder="Subject line" name="subject" id="subject_input" required>
+          <option disabled hidden selected>País</option>
+          <option>Colombia</option>
+          <option>United Kingdom</option>
+          <option>United States</option>
+        </select>
+      </div>
+      <div class="telephone">
+        <label for="name"></label>
+        <input type="text" placeholder="Ciudad" name="telephone" id="telephone_input" required>
+      </div>
+      <div class="telephone">
+        <label for="name"></label>
+        <input type="text" placeholder="Dirección" name="telephone" id="telephone_input" required>
+      </div>
       <div class="subject">
         <label for="subject"></label>
         <select placeholder="Subject line" name="subject" id="subject_input" required>
@@ -39,10 +60,6 @@
       <div class="telephone">
         <label for="name"></label>
         <input type="text" placeholder="Ocupación" name="telephone" id="telephone_input" required>
-      </div>
-      <div class="telephone">
-        <label for="name"></label>
-        <input type="text" placeholder="Fecha de nacimiento     DD/MM/YY" name="telephone" id="telephone_input" required>
       </div>
       <div class="telephone">
         <label for="name"></label>
