Congratulations page finished

--- a/congratulations.html
+++ b/congratulations.html
@@ -4,7 +4,24 @@
     <title>Innora Mirror</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="./CSS/login.css"/>
 </head>
 <body>
+    <div class="overlay">
+        <!-- LOGN IN FORM by Omar Dsoky -->
+        <form>
+           <!--   con = Container  for items in the form-->
+           <div class="con">
+           <!--     Start  header Content  -->
+           <header class="head-form">
+              <h2>¡Gracias por su compra!</h2>
+              <!--     A welcome message or an explanation of the login form -->
+              <h3>¡Estaremos en contacto contigo una vez procesemos tu orden!</h3>
+           </header>
+           <!--     End  header Content  -->
+           <br>
+           <img style="float:bottom;margin:10px;" src="./icons/encuesta.png"/>
+           </div>
+        </form>
 </body>
 </html>
