--- a/congratulations.html
+++ b/congratulations.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Innora Mirror</title>
+    <title>Innova Mirror</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./CSS/login.css"/>
 </head>
 <body>
     <div class="overlay">
-        <!-- LOGN IN FORM by Omar Dsoky -->
         <form>
            <!--   con = Container  for items in the form-->
            <div class="con">
